--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -27,10 +27,11 @@
         <PackageVersion Include="Microsoft.DurableTask.Worker.Grpc" Version="1.3.0" />
         <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
         <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
         <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.1" />
         <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.1" />
         <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
-        <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.1" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
         <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
         <PackageVersion Include="MinVer" Version="2.3.0" />
