--- a/src/Dapr.Jobs/Dapr.Jobs.csproj
+++ b/src/Dapr.Jobs/Dapr.Jobs.csproj
@@ -15,6 +15,8 @@
     </ItemGroup>
     
     <ItemGroup>
+        <PackageReference Include="Google.Protobuf" />
+        <PackageReference Include="Grpc.Net.Client" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
         <PackageReference Include="Microsoft.Extensions.Http" />
     </ItemGroup>
