--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -107,9 +107,10 @@ jobs:
       - name: Parse release version
         run: python ./.github/scripts/get_release_version.py
       - name: Setup ${{ matrix.display-name }}
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.install-version }}
+          dotnet-quality: 'ga'  # Prefer a GA release, but use the RC if not available
       - name: Setup .NET 8.0 # net8 is always required.
         uses: actions/setup-dotnet@v1
         if: ${{ matrix.install-version != '8.0.x' }}
