--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -73,12 +73,13 @@ jobs:
       with:
         dotnet-version: ${{ matrix.install-version }}
     - name: Setup .NET 8.0 # net8 is always required.
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       if: ${{ matrix.install-version != '8.0.x' }}
       with:
         dotnet-version: |
           8.0.x
           9.0.x
+        dotnet-quality: 'ga' # Prefer a GA release, but use the RC if not available
     - name: Build
       # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
       run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
