--- a/src/Dapr.Protos/Dapr.Protos.csproj
+++ b/src/Dapr.Protos/Dapr.Protos.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <TargetFrameworks>net6;net7;net8;net9</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <Description>This package contains the reference protos used by develop services using Dapr.</Description>
