--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -18,6 +18,7 @@ jobs:
     name: run integration tests
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         dotnet-version: ['6.0', '7.0', '8.0']
         include:
