--- a/test/Dapr.AspNetCore.IntegrationTest/Dapr.AspNetCore.IntegrationTest.csproj
+++ b/test/Dapr.AspNetCore.IntegrationTest/Dapr.AspNetCore.IntegrationTest.csproj
@@ -7,14 +7,36 @@
         </PackageReference>
         <PackageReference Include="FluentAssertions" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+<!--        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />-->
         <PackageReference Include="xunit" />
         <PackageReference Include="xunit.runner.visualstudio">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+          <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+          <PackageReference Include="Microsoft.AspNetCore.TestHost" />
+          <PackageReference Include="Microsoft.Extensions.Configuration" />
+          <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+          <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+          <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+          <PackageReference Include="Microsoft.Extensions.Hosting" />
+          <PackageReference Include="Microsoft.Extensions.Logging" />
+          <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+          
+          
       </ItemGroup>
-    
+    <ItemGroup Condition="'$(TargetFramework)' == 'net9'">
+        <PackageReference Update="Microsoft.AspNetCore.Mvc.Testing" VersionOverride="9.0.0" />
+        <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="9.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Configuration" VersionOverride="9.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" VersionOverride="9.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection" VersionOverride="9.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" VersionOverride="9.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Hosting" VersionOverride="9.0.0" />
+        <PackageReference Update="Microsoft.Extensions.Logging" VersionOverride="9.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" VersionOverride="9.0.0"/>
+    </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
     <ProjectReference Include="..\..\src\Dapr.Protos\Dapr.Protos.csproj" />
