--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dotnet-version: ['6.0', '7.0', '8.0']
+        dotnet-version: ['6.0', '7.0', '8.0', '9.0']
         include:
         - dotnet-version: '6.0'
           display-name: '.NET 6.0'
@@ -37,6 +37,11 @@ jobs:
           framework: 'net8'
           prefix: 'net8'
           install-version: '8.0.x'
+        - dotnet-version: '9.0'
+          display-name: '.NET 9.0'
+          framework: 'net9'
+          prefix: 'net9'
+          install-version: '9.0.x'
     env:
       NUPKG_OUTDIR: bin/Release/nugets
       GOVER: 1.20.3
@@ -103,14 +108,22 @@ jobs:
       - name: Parse release version
         run: python ./.github/scripts/get_release_version.py
       - name: Setup ${{ matrix.display-name }}
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.install-version }}
-      - name: Setup .NET 8.0 # net8 is always required.
-        uses: actions/setup-dotnet@v1
+          dotnet-quality: 'ga'  # Prefer a GA release, but use the RC if not available
+      - name: Setup .NET 8 (required)
+        uses: actions/setup-dotnet@v3
         if: ${{ matrix.install-version != '8.0.x' }}
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: '8.0.x'
+          dotnet-quality: 'ga'
+      - name: Setup .NET 9 (required)
+        uses: actions/setup-dotnet@v3
+        if: ${{ matrix.install-version != '9.0.x' }}
+        with:
+          dotnet-version: '9.0.x'
+          dotnet-quality: 'ga'
       - name: Build
         # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
         run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
