--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -24,9 +24,10 @@ jobs:
       - name: Parse release version
         run: python ./.github/scripts/get_release_version.py
       - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: 9.0.x
+          dotnet-quality: 'ga'
       - name: Build
         run: dotnet build --configuration release
       - name: Generate Packages
@@ -43,39 +44,49 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dotnet-version: ['6.0', '7.0', '8.0']
+        dotnet-version: ['6.0', '7.0', '8.0', '9.0']
         include:
         - dotnet-version: '6.0'
-          install-3: false
           display-name: '.NET 6.0'
           framework: 'net6'
           prefix: 'net6'
           install-version: '6.0.x'
         - dotnet-version: '7.0'
-          install-3: false
           display-name: '.NET 7.0'
           framework: 'net7'
           prefix: 'net7'
           install-version: '7.0.x'
         - dotnet-version: '8.0'
-          install-3: false
           display-name: '.NET 8.0'
           framework: 'net8'
           prefix: 'net8'
           install-version: '8.0.x'
+        - dotnet-version: '9.0'
+          display-name: '.NET 9.0'
+          framework: 'net9'
+          prefix: 'net9'
+          install-version: '9.0.x'
     steps:
     - uses: actions/checkout@v1
     - name: Parse release version
       run: python ./.github/scripts/get_release_version.py
     - name: Setup ${{ matrix.display-name }}
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ matrix.install-version }}
-    - name: Setup .NET 8.0 # net8 is always required.
-      uses: actions/setup-dotnet@v1
+        dotnet-quality: 'ga' # Prefer a GA release, but use the RC if not available
+    - name: Setup .NET 8 (required)
+      uses: actions/setup-dotnet@v3
       if: ${{ matrix.install-version != '8.0.x' }}
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: '8.0.x'
+        dotnet-quality: 'ga'
+    - name: Setup .NET 9 (required)
+      uses: actions/setup-dotnet@v3
+      if: ${{ matrix.install-version != '9.0.x' }}
+      with:
+        dotnet-version: '9.0.x'
+        dotnet-quality: 'ga'
     - name: Build
       # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
       run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
