--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -60,17 +60,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: Parse release version
       run: python ./.github/scripts/get_release_version.py
-    - name: Setup .NET 8 (required)
+    - name: Setup ${{ matrix.display-name }}
       uses: actions/setup-dotnet@v3
-      if: ${{ matrix.install-version != '8.0.x' }}
       with:
-        dotnet-version: '8.0.x'
-        dotnet-quality: 'ga'
-    - name: Setup .NET 9 (required)
-      uses: actions/setup-dotnet@v3
-      if: ${{ matrix.install-version != '9.0.x' }}
-      with:
-        dotnet-version: '9.0.x'
+        dotnet-version: ${{ matrix.install-version }}
         dotnet-quality: 'ga'
     - name: Build
       # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
